# aki-ami

./: app.py  base_window.py  config.json  config_manager.py  docs.md  mod_install_window.py  mod_metadata_parser.py  pyproject.toml
example_mod/: metadata.ami
example_mod/servermod/: README.md  package.json
example_mod/servermod/src/: mod.ts
src/: app.py  base_window.py  config.json  config_manager.py  mod_install_window.py  mod_metadata_parser.py
